--- a/src/style.css
+++ b/src/style.css
@@ -1,35 +1,77 @@
+body {background-color: rgb(239, 199, 151);}
+
 h2 {
     font-size: large;
 }
 
+button {
+    border-radius: 40px 40px 0px 0px; 
+    background-color: #fdedd4;
+    border-style: none;
+}
+
 #content {
     height: 100vh;
-    background-color: bisque;
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
-    grid-template-rows: 100px 1fr 40px;
+    grid-template-rows: 80px 50px 1fr;
 }
 
 .header, .footer {
+    color: white;
     background-color: darkgreen;
     grid-column: 1 / -1;
 }
 
 .header {
     grid-row: 1 / 2;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
-.leftSidebar, .rightSidebar, .display {
-    grid-row: 2 / -2;
+
+.headerLogo {
+}
+
+.headerSocials {
+}
+
+.tabNav {
+    grid-area: 2/2/3/3;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    padding-top: 10px;
+}
+
+.leftSidebar, .rightSidebar {
+    height: 100%;
+}
+
+.leftSidebar {
+    grid-area: 2/1/4/2;
+}
+
+.rightSidebar {
+    grid-area: 2/-1/4/-2;
 }
 
 .display {
-    background-color: rgb(253, 237, 212);
+    background-color: #fdedd4;
+    grid-area: 3/2/4/3;
     display: flex;
     flex-direction: column;
     padding: 10px;
     align-items: center;
+    padding-bottom: 50px;
 }
 
 .footer {
-    grid-row: -1 / -2;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
