--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,27 @@
-body {background-color: rgb(239, 199, 151);}
+@font-face {
+    font-family: Londrina;
+    src: url(../fonts/LondrinaSolid-Regular.ttf);
+}
+
+
+html, body {
+    background-color: rgb(239, 199, 151);
+    font-family: Londrina;
+    font-size: 1.25em;
+}
 
 h2 {
-    font-size: large;
+    font-size: 1.3em;
 }
 
 button {
     border-radius: 40px 40px 0px 0px; 
-    background-color: #fdedd4;
+    background-color: #bfa478;
     border-style: none;
+}
+
+.buttonActive {
+    background-color: #fdedd4;
 }
 
 #content {
@@ -28,6 +42,7 @@ button {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0 2%;
 }
 
 .headerLogo {
@@ -60,9 +75,43 @@ button {
     grid-area: 3/2/4/3;
     display: flex;
     flex-direction: column;
-    padding: 10px;
+    padding: 3% 6% 50px;  
     align-items: center;
-    padding-bottom: 50px;
+    gap: 10px;
+}
+
+.hoursBlock {
+    width: 75vw;
+    display: flex;
+    justify-content: center;
+    background-image: url(../img/pizza1.jpg);
+    background-position: center;
+    background-repeat: no-repeat; 
+    background-size: cover;
+    margin: 20px;
+    padding: 20px;
+}
+
+.daysList {
+    width: 80%;
+    border: 1px solid black;
+    padding: 0 20px;
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+.menuItem {
+    width: 80%;
+    padding-bottom: 2px;
+    border-bottom: 1px solid black;
+}
+
+.pizzaName {
+    font-size: 1.25rem;
+    font-weight: bold;
+}
+
+.pizzaDesc {
+    font-style: italic;
 }
 
 .footer {
