--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,8 @@ h2 {
 }
 
 button {
+    font-family: Londrina;
+    font-size: 1.3rem;
     border-radius: 40px 40px 0px 0px; 
     background-color: #bfa478;
     border-style: none;
@@ -43,12 +45,6 @@ button {
     justify-content: space-between;
     align-items: center;
     padding: 0 2%;
-}
-
-.headerLogo {
-}
-
-.headerSocials {
 }
 
 .tabNav {
